2005-07-13  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.rb (heading, link, blockquote),
	style/rd+/parser.rb (heading, link, blockquote): add format
	methods (suggested by Kouhei Sutou). 
	* misc/plugin/bbs.rb (bbs_post): use 'Parser.heading'.
	* misc/plugin/trackback.rb (trackback_post): use 'Parser.link' and
	'Parser.blockquote'.

	* misc/plugin/comment.rb, misc/plugin/bbs.rb: use @user instead of
	@cgi.cookies['auth_name'][0].

	* misc/text/rd+/TextFormattingRules: revise URIs about the RD
	format.

	* plugin/00default.rb (create_menu): code cleanup.
	(creatable?): add a new method.
	* style/default/html_formatter.rb (make_link): use
	'Plugin#creatable?' instead of 'Plugin#auth?' in missing anchors.

	* misc/plugin/src.rb (src): add a title.

	* hiki/command.rb (PermissionError): add a new exception class.
	(dispatch): add an error message in the error page.
	* template/error.html: display an error message.

	* template/view.html: wrap main contents with 'div.main' and wrap
	preview contents with 'div.preview'.

	* hiki/repos/cvs.rb (import): use 'hiki' as a vendor-tag.

2005-07-12  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/html_formatter.rb (tdiary_section): return empty
	strings if contents is empty.

	* hiki/command.rb (cmd_login), plugin/00default.rb (create_menu),
	template/login.html: redirect to the current page (suggested by
	hadai).

	* misc/plugin/attach/attach.rb (attach_map): unescape page
	names (by NAGASAKI).

	* hiki/command.rb (cmd_login): use Plugin#login.
	* misc/xmlrpc/xmlrpc.cgi: use Plugin#login and Plugin#editable?.
	save 'editor' and 'title' correctly.
	* plugin/00default.rb (editable?): add a new method.
	* hiki/plugin.rb (login): add a new method to set '@user'.

	* hiki-mode.el: support login and logout (by Takeshi UME Imai).

2005-07-09  Kouhei Yanagita <sugi@dream.big.or.jp>
	* style/default/html_formatter.rb: fixed: a block plugin preceding
	a heading level 1 (!) makes markup wrong.